--- a/WeatherBuddy/WeatherBuddy/PreferencesPage.xaml
+++ b/WeatherBuddy/WeatherBuddy/PreferencesPage.xaml
@@ -7,16 +7,16 @@
             <!-- Title (and buttons for horizontal view) -->
             <Frame x:Name="TitleFrame" BackgroundColor="#2196F3" Padding="6" CornerRadius="0">
                 <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="4,4,4,10">
-                    <Button x:Name="HorizontalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" IsVisible="False" Clicked="BackButton_Clicked"/>
+                    <Button x:Name="HorizontalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" IsVisible="False" Clicked="BackButton_Clicked" BackgroundColor="#888888"/>
                     <Label x:Name="TitleLabel" Text="WeatherBuddy!" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-                    <Button x:Name="HorizontalViewResetButton" Text="Reset" HorizontalOptions="End" IsVisible="False" Clicked="ResetButton_Clicked"/>
+                    <Button x:Name="HorizontalViewResetButton" Text="Reset" HorizontalOptions="End" IsVisible="False" Clicked="ResetButton_Clicked" BackgroundColor="#888888"/>
                 </StackLayout>
             </Frame>
 
             <!-- Buttons for vertical view -->
             <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="4">
-                <Button x:Name="VerticalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" Clicked="BackButton_Clicked"/>
-                <Button x:Name="VerticalViewResetButton" Text="Reset" HorizontalOptions="EndAndExpand" Clicked="ResetButton_Clicked"/>
+                <Button x:Name="VerticalViewBackButton" Text="&lt; Back" HorizontalOptions="Start" Clicked="BackButton_Clicked" BackgroundColor="#888888"/>
+                <Button x:Name="VerticalViewResetButton" Text="Reset" HorizontalOptions="EndAndExpand" Clicked="ResetButton_Clicked" BackgroundColor="#888888"/>
             </StackLayout>
 
             <!-- Rest of page in scroll view, in case device display is too small -->
