Show api errors on locations page
But only if no other error message has been shown to user. Also allow users to reload data via a button when an error has occured.
Also fix reload button colours on main page.

--- a/WeatherBuddy/WeatherBuddy/LocationsPage.xaml
+++ b/WeatherBuddy/WeatherBuddy/LocationsPage.xaml
@@ -18,6 +18,9 @@
             <Button x:Name="VerticalViewNewLocationButton" Text="New location" HorizontalOptions="EndAndExpand" Clicked="NewLocationButton_Clicked" BackgroundColor="#888888"/>
         </StackLayout>
 
+        <!-- Button to reload data, hidden until needed -->
+        <Button x:Name="ReloadButton" Text="Reload data" IsVisible="false" Clicked="ReloadButton_Clicked" BackgroundColor="#888888"/>
+
         <!-- Help text -->
         <Label x:Name="EditHelpTextLabel" Text="Tap a loction for edit options" Margin="4"/>
 
